--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL="https://meethub-backend.onrender.com/"
-BASE_URL="https://meethub-backend.onrender.com/"
+REACT_APP_API_URL="https://meethub-backend.onrender.com"
+BASE_URL="https://meethub-backend.onrender.com"
